Make sure the clip path works on mobile Safari

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -196,6 +196,7 @@
 
             &--back {
                 transform: rotateY(0);
+                -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
                 clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
             }
         }
